--- a/portfolio_website/index.html
+++ b/portfolio_website/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
     Hello
+    <button onclick="getData()">Get Data</button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="test.js"></script>
   </body>
 </html>
