--- a/todo/index.html
+++ b/todo/index.html
@@ -16,6 +16,6 @@
   </div>
 
   <script src="db.js"></script>
-  <script src="app_skeleton.js"></script>
+  <script src="app.js"></script>
 </body>
 </html
